uploading FindAllPeopleWithSecret